# cornercutter

./: .gitignore  README.md  package-lock.json  package.json
frontend/: .env  .eslintrc.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/assets/skills/: skills.json
frontend/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: ItemTypeDefinitions.tsx  SearchColumn.tsx
frontend/src/context/: ConfigContext.tsx
frontend/src/contexts/: SavingContext.tsx
frontend/src/data/: TestItems.ts  TestItems.tsx  TestSkills.tsx
frontend/src/hooks/: UseDebounce.ts  useGoogleAnalytics.ts
frontend/src/pages/: AllFloorsConfig.tsx  GeneralConfig.tsx  StartingConfig.tsx  (+1 more)
mod/: cornercutter.sln
mod/cornercutter/: ConfigOptions.cs  ConsecutiveSpawnCollection.cs  CornerCutter.cs  CutterConfig.cs  FinaleSwapper.cs  FloorConfig.cs  LoopingSpawnCollection.cs  PickupSwapper.cs  SpawnCollection.cs  StartingSkillSwapper.cs  WeightedSkill.cs  WeightedSpawnCollection.cs  cornercutter.csproj
src-tauri/: Cargo.toml  tauri.conf.json  version.json
src-tauri/built-mod/: doorstop_config.ini
src-tauri/built-mod/BepInEx/config/: BepInEx.cfg
src-tauri/built-mod/BepInEx/core/: BepInEx.Preloader.xml
src-tauri/icons/: icon.icns
src-tauri/installer/: custom_installer.wsx  install_cornercutter_dependencies.ps1  uninstall_cornercutter_dependencies.ps1
src-tauri/src/: config_io.rs  main.rs  mod_handlers.rs  types.rs
src-tauri/src/mod_handlers/: mod_reader.rs  mod_util.rs  mod_writer.rs
src-tauri/src/types/: enums.rs  structs.rs
(+157 files in other folders)
